--- a/localisation/en_GB.json
+++ b/localisation/en_GB.json
@@ -1,5 +1,6 @@
 {
-    "general_component_error": "## Something went wrong...\nIt appears something went wrong internally. This is probably unintentional; please try again later. If this error persists, please report it.",
+    "general_component_err": "## Something went wrong...\nIt appears something went wrong internally. This is probably unintentional; please try again later. If this error persists, please report it.",
+    "component_timeout": "## Timed out!\nYou took too long to complete this action. Please try again.",
 
     "auth_recover": "## Password updated!\nYour Duffelbag account with name **{username}** has been updated to use password ||{password}||.",
     "auth_new_collapsed": "## Account successfully created!\nYour shiny new Duffelbag account with name **{username}** has been created.",
@@ -7,10 +8,11 @@
     "auth_delete_schedule": "## Account successfully scheduled for deletion!\nYour Duffelbag account has successfully been scheduled for deletion **{timestamp}**. In case you wish to undo this, please use [TO BE IMPLEMENTED].",
     "auth_delete_success": "## Account successfully deleted!\nYour duffelbag account named **{username}** has been deleted, along with any linked platform and Arknights accounts.",
     "auth_bind_platform": "## Account successfully bound!\nYour {platform} account has successfully been bound to the Duffelbag account with username **{username}**.",
-    "auth_bind_arknights": "## Verification request sent!\nPlease check your email (**{email}**) for a verification mail from Yostar (**info@mail.yo-star.com**). This mail should contain a six-digit verification code.\nTo complete the verification progress, click the button below and enter the verification code in the popup window.\nDoing so will bind your Arknights account to your Duffelbag account, allowing you to automatically access (read-only) your Arknights inventory data from inside Discord!",
-    "auth_bind_arknights_title": "Complete Verification",
-    "auth_bind_arknights_modal_label": "Verfication Code",
-    "auth_bind_arknights_success": "## Successfully bound your Arknights account!\nYour arknights account has been successfully bound to your Duffelbag account.",
+    "auth_bind_ak": "## Verification request sent!\nPlease check your email (**{email}**) for a verification mail from Yostar (**info@mail.yo-star.com**). This mail should contain a six-digit verification code.\nTo complete the verification progress, click the button below and enter the verification code in the popup window.\nDoing so will bind your Arknights account to your Duffelbag account, allowing you to automatically access (read-only) your Arknights inventory data from inside Discord!",
+    "auth_bind_ak_title": "Complete Verification",
+    "auth_bind_ak_modal_label": "Verfication Code",
+    "auth_bind_ak_success": "## Successfully bound your Arknights account!\nYour arknights account has been successfully bound to your Duffelbag account.",
+    "auth_bind_ak_invalid_vcode": "## Invalid verification code!\n{code} is not a valid verification code. Please ensure that the code entered consists of exactly 6 digits.",
 
     "exc_auth_credsize": "The provided {credential} is of invalid length: {credential}s must be between {min} and {max} characters long.",
     "exc_auth_credchar": "The provided {credential} contains invalid characters.\nPlease ensure you only use '{allowed_chars}'.",
