--- a/localisation/en_GB.json
+++ b/localisation/en_GB.json
@@ -4,7 +4,7 @@
 
     "auth_recover": "## Password updated!\nYour Duffelbag account with name **{username}** has been updated to use password ||{password}||.",
     "auth_new_collapsed": "## Account successfully created!\nYour shiny new Duffelbag account with name **{username}** has been created.",
-    "auth_new_expanded": "## Account successfully created!\nYour shiny new Duffelbag account with name **{username}** has been created.\n\nAny commands run on this {platform} account will automatically use this Duffelbag account.\nYou can register other {platform} accounts to this Duffelbag account using {cmd$account_bind_platform}.\nYou'll need to remember your username and password to do this.\nIf you ever forget them, you can reset your password using {cmd$account_duffelbag_recover}.",
+    "auth_new_expanded": "## Account successfully created!\nYour shiny new Duffelbag account with name **{username}** has been created.\n\nAny commands run on this {platform} account will automatically use this Duffelbag account.\nYou can register other {platform} accounts to this Duffelbag account using {cmd$account_discord_bind}.\nYou'll need to remember your username and password to do this.\nIf you ever forget them, you can reset your password using {cmd$account_duffelbag_recover}.",
     "auth_delete_schedule": "## Account successfully scheduled for deletion!\nYour Duffelbag account has successfully been scheduled for deletion **{timestamp}**. In case you wish to undo this, please use [TO BE IMPLEMENTED].",
     "auth_delete_success": "## Account successfully deleted!\nYour duffelbag account named **{username}** has been deleted, along with any linked platform and Arknights accounts.",
     "auth_bind_platform": "## Account successfully bound!\nYour {platform} account has successfully been bound to the Duffelbag account with username **{username}**.",
@@ -12,7 +12,10 @@
     "auth_bind_ak_title": "Complete Verification",
     "auth_bind_ak_modal_label": "Verfication Code",
     "auth_bind_ak_success": "## Successfully bound your Arknights account!\nYour arknights account has been successfully bound to your Duffelbag account.",
+    "auth_bind_ak_success_active": "## Successfully bound your Arknights account!\nYour arknights account has been successfully bound to your Duffelbag account.\nThis account has been marked as your active account. If you wish to change this, please use {cmd$account_arknights_set-active}",
     "auth_bind_ak_invalid_vcode": "## Invalid verification code!\n{code} is not a valid verification code. Please ensure that the code entered consists of exactly 6 digits.",
+    "auth_ak_set_active": "## Activate an account!\nPlease select the account you wish to activate from the dropdown menu below.",
+    "auth_ak_set_active_success": "## Successfully activated your Arknights account!\nYour arknights account on the {server} server with email address {email} has been set as your active account.\nAll commands will now use this account's data.",
 
     "exc_auth_credsize": "The provided {credential} is of invalid length: {credential}s must be between {min} and {max} characters long.",
     "exc_auth_credchar": "The provided {credential} contains invalid characters.\nPlease ensure you only use '{allowed_chars}'.",
